find core features of cheeses from neighboring countries

--- a/core_microbiota.ipynb
+++ b/core_microbiota.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f8bf5dc9-c0c7-427a-9f7b-4a2fdabfd33b",
    "metadata": {},
    "outputs": [],
@@ -516,7 +516,7 @@
    "id": "860e32dc-3717-4777-9ae3-c0f2851c8d2b",
    "metadata": {},
    "source": [
-    "#### Download tsv file"
+    "#### Download tsv file of core features of all cheeses"
    ]
   },
   {
@@ -716,7 +716,7 @@
    "id": "42ae7f94-04fc-4b43-845b-2ab1c7f7c031",
    "metadata": {},
    "source": [
-    "Find core features of CH cheeses with natural rindtype:"
+    "##### Find core features of CH cheeses with natural rindtype:"
    ]
   },
   {
@@ -832,7 +832,7 @@
    "id": "4b36e01e-9ede-40f0-b1a4-4f1c6fee45a2",
    "metadata": {},
    "source": [
-    "Find core features of CH cheeses with washed rindtype:"
+    "##### Find core features of CH cheeses with washed rindtype:"
    ]
   },
   {
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "c1ba5739-aaf7-45bb-9c89-bf2c7a6fe4ba",
    "metadata": {},
    "outputs": [
@@ -920,13 +920,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-8xdrkkrp')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-uexdnjwq')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
        "<visualization: Visualization uuid: 44aaefdd-61c0-4a7d-bded-3879ace69aba>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,7 +940,7 @@
    "id": "b97fcf71-8922-4307-8865-b71a172e21ec",
    "metadata": {},
    "source": [
-    "Find core features of CH cheeses with alpine style:"
+    "##### Find core features of CH cheeses with alpine style:"
    ]
   },
   {
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "id": "ac1cb3a2-83d2-4685-8cce-07e17bdfc24b",
    "metadata": {},
    "outputs": [
@@ -1028,13 +1028,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-j2_61sdh')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-29hs81b3')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
        "<visualization: Visualization uuid: c060248a-b70e-4c1a-9d20-f0defc56c631>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,70 +1044,102 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a41e88ae-0e86-4af0-80a4-f749e3b39c9d",
+   "cell_type": "markdown",
+   "id": "d50cf8c9-576b-4cf8-b408-420b223b6db4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de98704a-b395-4dab-9fc0-e2d889c65e78",
+   "metadata": {},
+   "source": [
+    "Filter table to have only cheeses from neighboring countries (no cheeses from Germany or Austria in our dataset):"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1170cb48-42f0-43bb-8099-45d4dd328f5b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dfed3c07-dd08-4581-956b-4ae6d55bdc04",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1937d179-2f6b-4527-b327-4c68663867e5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a7aa6691-3864-4ce0-a967-ee00bf353f1c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "0e57b1c5-4c18-4a66-825e-ed149cfa9c7d",
+   "execution_count": 8,
+   "id": "e796b1ce-a1d5-401f-885c-3b0876075709",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32mSaved Visualization to: CE/feature_table_CH_natural.qzv\u001b[0m\n",
+      "\u001b[32mSaved FeatureTable[Frequency] to: CE/feature_table_neighbor.qza\u001b[0m\n",
       "\u001b[0m"
      ]
     }
    ],
    "source": [
-    "! qiime feature-table summarize \\\n",
-    "--i-table $data_dir/feature_table_CH_natural.qza \\\n",
-    "--o-visualization $data_dir/feature_table_CH_natural.qzv"
+    "! qiime feature-table filter-samples \\\n",
+    "--i-table $data_dir/dada2_table_align_filtered.qza \\\n",
+    "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "--p-where \"[country]='France' OR [country]='Italy'\"\\\n",
+    "--o-filtered-table $data_dir/feature_table_neighbor.qza"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72f1c1b6-8313-4353-bd30-9164d20f8f39",
+   "metadata": {},
+   "source": [
+    "##### Find core features of neighboring cheeses with natural rindtype:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "dd3038fe-3a62-4698-9196-995af187d248",
+   "execution_count": 9,
+   "id": "1170cb48-42f0-43bb-8099-45d4dd328f5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureTable[Frequency] to: CE/feature_table_neighbor_natural.qza\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime feature-table filter-samples \\\n",
+    "--i-table $data_dir/feature_table_neighbor.qza \\\n",
+    "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "--p-where \"[rindtype]='natural'\"\\\n",
+    "--o-filtered-table $data_dir/feature_table_neighbor_natural.qza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "df78cd1b-fdba-4321-adaf-984bae126d6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Visualization to: CE/core_microbiota_neighbor_natural.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime feature-table core-features \\\n",
+    "--i-table $data_dir/feature_table_neighbor_natural.qza \\\n",
+    "--p-min-fraction 0.7 \\\n",
+    "--p-steps 10 \\\n",
+    "--o-visualization $data_dir/core_microbiota_neighbor_natural.qzv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7722de83-0540-4a4c-a3fe-8480335deb91",
    "metadata": {},
    "outputs": [
     {
@@ -1143,20 +1175,300 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-1ghk27xh')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-d8jwgck2')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: 1723da06-c9e2-4655-b698-beb5f16d91b6>"
+       "<visualization: Visualization uuid: 47771aa4-7c15-4f91-a633-89b5c906ffb8>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Visualization.load(f'{data_dir}/feature_table_CH_natural.qzv')"
+    "Visualization.load(f'{data_dir}/core_microbiota_neighbor_natural.qzv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdeed491-aeb0-4679-9af7-2ecfa0544ce5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39874416-1e96-4490-a420-1f6475cea9dc",
+   "metadata": {},
+   "source": [
+    "##### Find core features of neighboring cheeses with washed rindtype:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1937d179-2f6b-4527-b327-4c68663867e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureTable[Frequency] to: CE/feature_table_neighbor_washed.qza\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime feature-table filter-samples \\\n",
+    "--i-table $data_dir/feature_table_neighbor.qza \\\n",
+    "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "--p-where \"[rindtype]='washed'\"\\\n",
+    "--o-filtered-table $data_dir/feature_table_neighbor_washed.qza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9f945625-e311-4547-aefc-5045950dd5b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Visualization to: CE/core_microbiota_neighbor_washed.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime feature-table core-features \\\n",
+    "--i-table $data_dir/feature_table_neighbor_washed.qza \\\n",
+    "--p-min-fraction 0.7 \\\n",
+    "--p-steps 10 \\\n",
+    "--o-visualization $data_dir/core_microbiota_neighbor_washed.qzv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4f05f3d5-5ddc-4fa5-b497-4076bc45a137",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-h3e88puk')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: 5e1ee043-7a3f-4463-9251-cfe0547b8c06>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Visualization.load(f'{data_dir}/core_microbiota_neighbor_washed.qzv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2925714-d2e2-43f2-ab10-4a62f36befac",
+   "metadata": {},
+   "source": [
+    "##### Find core features of neighboring cheeses with alpine style:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c2cf8fd0-e925-4d88-b331-0d4574aaf498",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureTable[Frequency] to: CE/feature_table_neighbor_alpine.qza\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime feature-table filter-samples \\\n",
+    "--i-table $data_dir/feature_table_neighbor.qza \\\n",
+    "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "--p-where \"[style]='alpine'\"\\\n",
+    "--o-filtered-table $data_dir/feature_table_neighbor_alpine.qza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7f40fd36-4002-4304-90a0-9911525c7cab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Visualization to: CE/core_microbiota_neighbor_alpine.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime feature-table core-features \\\n",
+    "--i-table $data_dir/feature_table_neighbor_alpine.qza \\\n",
+    "--p-min-fraction 0.7 \\\n",
+    "--p-steps 10 \\\n",
+    "--o-visualization $data_dir/core_microbiota_neighbor_alpine.qzv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a7aa6691-3864-4ce0-a967-ee00bf353f1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-tn0l2ty_')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: 3bbf8d36-bd11-4227-9a8a-4693b8b7f4e9>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Visualization.load(f'{data_dir}/core_microbiota_neighbor_alpine.qzv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b423938-a9f7-4c93-a73a-0a20b0bac984",
+   "metadata": {},
+   "source": [
+    "### 5) Compare results of core features of CH cheeses with similar cheeses from neighboring countries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2d60112-5c83-443a-9c3d-64b38b5d6793",
+   "metadata": {},
+   "source": [
+    "##### Cheeses with natural rindtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22dbf183-4441-4ca3-b16c-e81db065005a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd6a1602-12c4-44c5-9393-e34203697da5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11059069-dd17-4713-8c5a-54298af6f4ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8a4ab08-0e35-4419-a56c-fae07f471da9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b24e20e7-2539-4358-8239-4a590feedfcf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
