core of varieties

--- a/core_microbiota.ipynb
+++ b/core_microbiota.ipynb
@@ -75,7 +75,8 @@
     "2) Find core features of all cheeses in our feature table\n",
     "3) Find core features of Swiss cheeses (in categories rindtype = natural, washed or style = alpine\n",
     "4) Find core features of similar neighboring country cheeses.\n",
-    "5) Compare results of Swiss to neighboring country cheeses."
+    "5) Compare results of Swiss to neighboring country cheeses.\n",
+    "6) Find core features of different variety cheeses."
    ]
   },
   {
@@ -2239,6 +2240,205 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b24e20e7-2539-4358-8239-4a590feedfcf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06f2ac5d-e6af-4923-b0a7-627d8d386cbc",
+   "metadata": {},
+   "source": [
+    "### 6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09ac99b4-ae08-4fdc-8d53-1f7554341c39",
+   "metadata": {},
+   "source": [
+    "##### Core features of alpine style cheeses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "44f83bc0-0007-434c-9332-c2dc0de5ef12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureTable[Frequency] to: CE/feature_table_alpine.qza\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "#filter feature table\n",
+    "! qiime feature-table filter-samples \\\n",
+    "--i-table $data_dir/dada2_table_align_filtered.qza \\\n",
+    "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "--p-where \"[style]='alpine'\"\\\n",
+    "--o-filtered-table $data_dir/feature_table_alpine.qza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "8b3aa207-a3d7-4f3a-b3bf-065607873bd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Visualization to: CE/core_microbiota_alpine.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "#find core features from feature table\n",
+    "! qiime feature-table core-features \\\n",
+    "--i-table $data_dir/feature_table_alpine.qza \\\n",
+    "--p-min-fraction 0.7 \\\n",
+    "--p-steps 10 \\\n",
+    "--o-visualization $data_dir/core_microbiota_alpine.qzv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88c28ca8-64bc-49ff-b081-781e57bfa432",
+   "metadata": {},
+   "source": [
+    "##### Core features of blue style cheeses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "d946488f-66fc-4ad6-a6cd-fac3bdf74ed2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureTable[Frequency] to: CE/feature_table_blue.qza\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "#filter feature table\n",
+    "! qiime feature-table filter-samples \\\n",
+    "--i-table $data_dir/dada2_table_align_filtered.qza \\\n",
+    "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "--p-where \"[style]='blue'\"\\\n",
+    "--o-filtered-table $data_dir/feature_table_blue.qza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81e3d3b8-7e3c-43d7-9960-68d18a301761",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#find core features from feature table\n",
+    "! qiime feature-table core-features \\\n",
+    "--i-table $data_dir/feature_table_neighbor_natural.qza \\\n",
+    "--p-min-fraction 0.7 \\\n",
+    "--p-steps 10 \\\n",
+    "--o-visualization $data_dir/core_microbiota_neighbor_natural.qzv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d8a94ae-73e5-495d-bf07-350fccc21b09",
+   "metadata": {},
+   "source": [
+    "##### Core features of washed_bloomy style cheeses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "f19eba9b-9673-468a-83d0-75e11a75fc4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureTable[Frequency] to: CE/feature_table_wb.qza\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "#filter feature table\n",
+    "! qiime feature-table filter-samples \\\n",
+    "--i-table $data_dir/dada2_table_align_filtered.qza \\\n",
+    "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "--p-where \"[style]='washed_bloomy'\"\\\n",
+    "--o-filtered-table $data_dir/feature_table_wb.qza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b179b181-9ceb-4dea-9976-18f216c07907",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f629d89-6e79-4667-a3d3-94a902e4751a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49b245e0-6240-43bd-8251-00381b151c96",
+   "metadata": {},
+   "source": [
+    "##### Core features of clothbound style cheeses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "08383e2f-b8a7-4117-97be-9cc4ead6ecc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureTable[Frequency] to: CE/feature_table_cloth.qza\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "#filter feature table\n",
+    "! qiime feature-table filter-samples \\\n",
+    "--i-table $data_dir/dada2_table_align_filtered.qza \\\n",
+    "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "--p-where \"[style]='clothbound'\"\\\n",
+    "--o-filtered-table $data_dir/feature_table_cloth.qza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e378bf52-40b3-472a-94d7-6f24b2ab4851",
    "metadata": {},
    "outputs": [],
    "source": []
