--- a/core_microbiota.ipynb
+++ b/core_microbiota.ipynb
@@ -84,7 +84,7 @@
    "id": "884ce5d5-93e9-4914-bd64-1b26a64e105c",
    "metadata": {},
    "source": [
-    "### 1)"
+    "### 1) Try different parameters to find core features"
    ]
   },
   {
@@ -509,7 +509,7 @@
    "id": "2d8ec70d-b5c8-41ad-b4ae-c28631dba414",
    "metadata": {},
    "source": [
-    "### 2)"
+    "### 2) Find core features of all cheeses in our feature table"
    ]
   },
   {
@@ -854,7 +854,7 @@
    "id": "b1e7272c-f01f-4b63-b16a-ecadf7634349",
    "metadata": {},
    "source": [
-    "### 3) "
+    "### 3) Find core features of Swiss cheeses (in categories rindtype = natural, washed or style = alpine"
    ]
   },
   {
@@ -1204,7 +1204,7 @@
    "id": "d50cf8c9-576b-4cf8-b408-420b223b6db4",
    "metadata": {},
    "source": [
-    "### 4)"
+    "### 4) Find core features of similar neighboring country cheeses."
    ]
   },
   {
