--- a/denoising.ipynb
+++ b/denoising.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "2e35e2e8-e5d1-4ca9-b8f0-9d043cb7773c",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "fe493faf-594a-4abe-abdd-f1c3633caee4",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "1764515e-f001-4ab9-9b17-a5057548a3a1",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['CE_file_downloads.ipynb', 'metadata.ipynb', 'README.md', '.gitignore']\n"
+      "['denoising.ipynb', 'core_microbiota.ipynb', 'metadata.ipynb', 'README.md', '.gitignore', 'Interactive Map.ipynb', 'food-metadata.tsv']\n"
      ]
     }
    ],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "2c88c441-a361-46f4-b7a8-53eef1d95ee1",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-10-14 13:07:10 URL:https://polybox.ethz.ch/index.php/s/2AYhc9EgbtA7wsE/download [959420090/959420090] -> \"CE/cheese-single-end-demux.qza\" [1]\n"
+      "2022-12-14 18:56:49 URL:https://polybox.ethz.ch/index.php/s/2AYhc9EgbtA7wsE/download [959420090/959420090] -> \"CE/cheese-single-end-demux.qza\" [1]\n"
      ]
     }
    ],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "be5ad2f8-7fd3-45c9-8437-a39b314e7589",
    "metadata": {},
    "outputs": [
@@ -101,8 +101,7 @@
      "output_type": "stream",
      "text": [
       "cheese-single-end-demux.qza\n",
-      "cheese-single-end-demux.qzv\n",
-      "food-metadata.tsv\n"
+      "diversity-interactive-map.qzv\n"
      ]
     }
    ],
@@ -120,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "2f261475-d23f-4ac7-af2b-9b67086860bc",
    "metadata": {},
    "outputs": [
@@ -128,7 +127,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-10-14 13:07:12 URL:https://polybox.ethz.ch/index.php/s/nEd4l5CWGWGEtae/download [42810/42810] -> \"CE/food-metadata.tsv\" [1]\n"
+      "2022-12-14 18:56:51 URL:https://polybox.ethz.ch/index.php/s/nEd4l5CWGWGEtae/download [42810/42810] -> \"CE/food-metadata.tsv\" [1]\n"
      ]
     }
    ],
@@ -138,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "6c66dc88-bcb7-4bf3-82c6-440d5cbed111",
    "metadata": {},
    "outputs": [
@@ -147,7 +146,7 @@
      "output_type": "stream",
      "text": [
       "cheese-single-end-demux.qza\n",
-      "cheese-single-end-demux.qzv\n",
+      "diversity-interactive-map.qzv\n",
       "food-metadata.tsv\n"
      ]
     }
@@ -158,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "b7287891-12f6-4e14-9f38-7ac5799c080d",
    "metadata": {},
    "outputs": [],
@@ -184,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "233e6ff4-922d-4cec-84c1-b891e54ba6e8",
    "metadata": {},
    "outputs": [
@@ -205,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "154503e0-0214-4f84-9af5-716f7297f222",
    "metadata": {
     "tags": []
@@ -244,13 +243,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-gaae6vei')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-8mwskkc9')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: d6d29653-7297-4ac6-90dc-a4f0a9d85fe3>"
+       "<visualization: Visualization uuid: ca5ee81f-684d-4f85-a3ad-995c506e7649>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,21 +273,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "ac0caa26-f24c-42a1-85b2-db5ef2261883",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32mSaved FeatureTable[Frequency] to: CE/dada2_table.qza\u001b[0m\n",
-      "\u001b[32mSaved FeatureData[Sequence] to: CE/dada2_rep_set.qza\u001b[0m\n",
-      "\u001b[32mSaved SampleData[DADA2Stats] to: CE/dada2_stats.qza\u001b[0m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "! qiime dada2 denoise-single \\\n",
     "    --i-demultiplexed-seqs $data_dir/cheese-single-end-demux.qza \\\n",
@@ -309,19 +297,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "5a040204-d2ef-4b5d-aee9-3bc371e6d14b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32mSaved Visualization to: CE/dada2_stats.qzv\u001b[0m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "! qiime metadata tabulate \\\n",
     "    --m-input-file $data_dir/dada2_stats.qza \\\n",
@@ -330,54 +309,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "31ba037a-b404-486d-812f-a3dd439d82f6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><img onload=\"(function(div, url){\n",
-       "if (typeof require !== 'undefined') {\n",
-       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
-       "} else {\n",
-       "    var baseURL = JSON.parse(\n",
-       "        document.getElementById('jupyter-config-data').innerHTML\n",
-       "    ).baseUrl.slice(0, -1);\n",
-       "}\n",
-       "url = baseURL + url;\n",
-       "fetch(url).then(function(res) {\n",
-       "    if (res.status === 404) {\n",
-       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
-       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
-       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
-       "                        '<br /><br />(Interactive output not available on ' +\n",
-       "                        'static notebook viewer services like nbviewer.)';\n",
-       "    } else if (res.status === 409) {\n",
-       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
-       "                        ' to see the visualization.';\n",
-       "    } else if (res.ok) {\n",
-       "        url = res.url;\n",
-       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
-       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
-       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
-       "                        ' target=\\'_blank\\'>new window</a>'\n",
-       "    } else {\n",
-       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
-       "                        ' errors.';\n",
-       "    }\n",
-       "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-w3hv895j')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
-      ],
-      "text/plain": [
-       "<visualization: Visualization uuid: 00498b98-0800-47f7-9681-f8ba77077c50>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Visualization.load(f'{data_dir}/dada2_stats.qzv')\n",
     "#colums are: sample-id, input, filtered, percentage of input passed filter, \n",
@@ -397,19 +332,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "181ca091-fc4c-430a-98f6-b5178900ef81",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32mSaved Visualization to: CE/dada2_rep_set.qzv\u001b[0m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "! qiime feature-table tabulate-seqs \\\n",
     "    --i-data $data_dir/dada2_rep_set.qza \\\n",
@@ -418,54 +344,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "1486a72d-9c7a-4d13-8bbe-a6ebb434788a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><img onload=\"(function(div, url){\n",
-       "if (typeof require !== 'undefined') {\n",
-       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
-       "} else {\n",
-       "    var baseURL = JSON.parse(\n",
-       "        document.getElementById('jupyter-config-data').innerHTML\n",
-       "    ).baseUrl.slice(0, -1);\n",
-       "}\n",
-       "url = baseURL + url;\n",
-       "fetch(url).then(function(res) {\n",
-       "    if (res.status === 404) {\n",
-       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
-       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
-       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
-       "                        '<br /><br />(Interactive output not available on ' +\n",
-       "                        'static notebook viewer services like nbviewer.)';\n",
-       "    } else if (res.status === 409) {\n",
-       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
-       "                        ' to see the visualization.';\n",
-       "    } else if (res.ok) {\n",
-       "        url = res.url;\n",
-       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
-       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
-       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
-       "                        ' target=\\'_blank\\'>new window</a>'\n",
-       "    } else {\n",
-       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
-       "                        ' errors.';\n",
-       "    }\n",
-       "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-2pqpn1ck')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
-      ],
-      "text/plain": [
-       "<visualization: Visualization uuid: d48f9e9c-ea25-475f-8c8a-1b25aec9ea0b>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Visualization.load(f'{data_dir}/dada2_rep_set.qzv')\n",
     "#Sequence Length Statistics\n",
@@ -485,19 +367,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "8d759774-1800-45c0-b628-24e2ff7574b8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32mSaved Visualization to: CE/dada2_table.qzv\u001b[0m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "! qiime feature-table summarize \\\n",
     "    --i-table $data_dir/dada2_table.qza \\\n",
@@ -506,54 +379,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "0cb170ee-bd0d-412e-97ae-438640c1b8a6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><img onload=\"(function(div, url){\n",
-       "if (typeof require !== 'undefined') {\n",
-       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
-       "} else {\n",
-       "    var baseURL = JSON.parse(\n",
-       "        document.getElementById('jupyter-config-data').innerHTML\n",
-       "    ).baseUrl.slice(0, -1);\n",
-       "}\n",
-       "url = baseURL + url;\n",
-       "fetch(url).then(function(res) {\n",
-       "    if (res.status === 404) {\n",
-       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
-       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
-       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
-       "                        '<br /><br />(Interactive output not available on ' +\n",
-       "                        'static notebook viewer services like nbviewer.)';\n",
-       "    } else if (res.status === 409) {\n",
-       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
-       "                        ' to see the visualization.';\n",
-       "    } else if (res.ok) {\n",
-       "        url = res.url;\n",
-       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
-       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
-       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
-       "                        ' target=\\'_blank\\'>new window</a>'\n",
-       "    } else {\n",
-       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
-       "                        ' errors.';\n",
-       "    }\n",
-       "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-x45xgqbl')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
-      ],
-      "text/plain": [
-       "<visualization: Visualization uuid: 02e095d5-6da7-4545-ab0a-4de7e8a97f86>"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Visualization.load(f'{data_dir}/dada2_table.qzv')\n",
     "#Overview\n",
